src/objects/C3P0_Non_Program_Farmer_Cluster_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The CKW who conducted this cluster meeting</description>
        <inlineHelpText>The CKW who conducted this cluster meeting</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>3.0 Non Program Farmer Cluster Meetings</relationshipLabel>
        <relationshipName>C3P0_Non_Program_Farmer_Cluster_Meetings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Farmer_Full_Name__c</fullName>
        <description>first and last name of the non program farmer who attended this group meeting</description>
        <inlineHelpText>first and last name of the non program farmer who attended this group meeting</inlineHelpText>
        <label>Farmer Full Name</label>
        <length>254</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>Cluster Meeting GeoLocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>3.0 Non Program Farmer Cluster Meetings</relationshipLabel>
        <relationshipName>C3P0_Non_Program_Farmer_Cluster_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>3.0 Non Program Farmer Cluster Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Meeting_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q{00000}</displayFormat>
        <label>3.0 Non Program Farmer Cluster Meeting N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Non Program Farmer Cluster Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>